--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "reddit-browser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sequoian.github.io/reddit-browser",
   "dependencies": {
+    "gh-pages": "^1.0.0",
+    "material-ui": "^0.18.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-datepicker": "^0.46.0",
@@ -15,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
